--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ nav{display:flex}
 .photo-gallery {
   text-align: center;
   padding: 40px 20px;
-  background:url(Img/SBG.jpeg);
+  background:url(Img/SBG.png);
 }
 
 .photo-gallery h2 {
