--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ nav{display:flex}
 .profile-img{width:180px;height:180px;border-radius:12px;object-fit:cover;margin-bottom:12px}
 
 /* ---------- TEACHERS (flip) ---------- */
-.teachers-section{padding:40px 0;background:url(Img/tbg.png)}
+.teachers-section{padding:40px 0;background:url(Img/sc.png)}
 .teachers-grid{display:flex;flex-wrap:wrap;gap:18px;justify-content:center}
 .flip-card{width:300px;height:300px;perspective:1000px}
 .flip-inner{position:relative;width:100%;height:100%;transition:transform .9s;transform-style:preserve-3d}
